--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "framer-motion": "^11.11.1",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.447.0",
     "next": "^14.1.3",
     "react": "latest",
     "react-dom": "latest",
