--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.3.1",
     "@next/third-parties": "^14.1.3",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.11.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.447.0",
